# ai-orchestra

./: .gitignore  README.md  config.toml  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: aggregator.rs  commands.rs  config.rs  history.rs  lib.rs  session.rs
src-tauri/src/dag/: mod.rs  scheduler.rs
src-tauri/src/planner/: integration_test.rs  mod.rs  parser.rs
src-tauri/src/worker/: mod.rs  pool.rs
src-tauri/src/worker/adapter/: anthropic_api.rs  claude.rs  codex.rs  glm.rs  mod.rs  openai_api.rs
src/components/: ConfigPanel.tsx  DagView.tsx  HistoryPanel.tsx  Layout.tsx  OutputPanel.tsx  PlannerChat.tsx  SettingsPanel.tsx  StatusBar.tsx  TaskDetail.tsx  TaskInput.tsx  ThemeToggle.tsx  Toast.tsx  WorkerPanel.tsx
src/hooks/: useKeyboardShortcuts.ts  useResizable.ts
src/stores/: orchestrator.ts  theme.ts
src/styles/: index.css
