[package]
name = "ai-orch"
version = "0.1.0"
description = "AI CLI Orchestrator"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
log = "0.4"
async-trait = "0.1"
dirs = "6.0.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "native-tls"] }
tauri-plugin-dialog = "2"
